<resources>
    <string name="app_name" translatable="false">PictureFrameController</string>
    <string name="action_settings">Settings</string>

    <string name="main_header_0">Found Devices</string>

    <string name="Status">Device status</string>
    <string name="noBond">No bond</string>
    <string name="Bonding">Bonding...</string>
    <string name="Bonded">Bonded</string>
    <string name="Bonded_with">Bonded with device!</string>
    <string name="UnBonding">Unbonding...</string>
    <string name="Unbonded">Unbonded</string>
    <string name="unkown_status">Status is unkown</string>

    <string name="conn_available">Connection is available</string>
    <string name="conn_unavailable">Connection is not available</string>
    <string name="conn_testing">Testing if connection can be created</string>

    <string name="Unavailable">Unavailable</string>
    <string name="error_bonding">Bonding error!</string>
    <string name="refresh">Refresh</string>

    <string name="messaging">Messaging App</string>

    <string name="conn_status">Connection status</string>
    <string name="connect_to">Connect to device</string>

    <string name="placeholder">Placeholder</string>
    <string name="submit">Submit</string>
    <string name="PairingStatus">Device pairing status</string>
    <string name="physicalAdress">Physical Adress</string>
    <string name="returntolist">Return to list</string>
    <string name="discoverableLabel">Make this device discoverable</string>
    <string name="discoverable_device">Device is currently discoverable</string>
    <string name="createconn">Create Connection</string>
    <string name="connectionLabel">Device to Device connection status</string>
    <string name="title_activity_picture_manager">PictureManagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="test_conn">Test connection</string>
    <string name="button_pic">Picture managment</string>
    <string name="imageLabel">Image shown in PictureFrame</string>
    <string name="sendpicture">Send captured picture to Device</string>
    <string name="selectedImage">Image selected from phone</string>
    <string name="ReturnView">Return to view</string>
    <string name="saveImage">Save fetched picture to memory</string>

</resources>
