<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/deviceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RelativeLayout
            android:id="@+id/physical_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/macAdress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/physicalAdress"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft=" "
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/macAdress_label"
                android:layout_weight="0.50"
                android:text="@string/placeholder"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/pairing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pairing_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PairingStatus"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pairingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/placeholder"
                android:textAlignment="viewStart"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/connection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/connection_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connectionLabel"
                android:textAlignment="viewStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/connectionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/unkown_status"
                android:textAlignment="viewStart"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/connectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onConnectButtonClick"
                android:text="@string/test_conn" />

            <Button
                android:id="@+id/pictureActButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onConnectButtonClick"
                android:text="@string/button_pic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onReturnButtonClick"
                android:text="@string/returntolist" />

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>